--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 .left{
     
-    width: 25vw;
+    width: 30vw;
     padding: 5px;
 }
 .right{
@@ -69,6 +69,7 @@ body{
 }
 .right{
     margin: 10px 0;
+    position: relative;
 }
 .header{
     display: flex;
@@ -77,6 +78,7 @@ body{
 }
 .header > *{
     padding: 20px;
+    /* height: 30px; */
 }
 .spotifyPlaylists{
     padding: 6px;
@@ -86,6 +88,8 @@ body{
     gap: 10px;
     flex-wrap: wrap;
     margin: 20px;
+    overflow-y: scroll;
+    max-height: 70vh;
 }
 .card{
     width: 150px;
@@ -117,4 +121,102 @@ body{
     opacity: 0;
     /* transition: all 1s ease-out; */
     
+}
+.signupbtn{
+    background-color: rgb(34, 34, 34);
+    color: rgb(146, 142, 142);
+    font-weight: bold;
+    outline: none;
+    border: none;
+    margin: 0 30px;
+    font-size: 19px;
+    cursor: pointer;
+}
+.signupbtn:hover{
+    font-size: 20px;
+    color: white;
+}
+.loginbtn{
+    background-color: white;
+    border-radius: 40px;
+    color: black;
+    font-weight: bold;
+    padding: 8px;
+    font-size: 19px;
+    cursor: pointer;
+    width: 125px;
+}
+.loginbtn:hover{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.playbar{
+    position: fixed;
+    bottom: 32px;
+    width: 66%;
+    padding: 15px;
+    filter: invert(1);
+    background: #dad5d5;
+    border-radius: 15px;
+    height: 30px;
+    /* height: 25px; */
+}
+.songbuttons{
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    gap: 30px;
+}
+.songList{
+    height: 390px;
+    overflow: auto;
+}
+.songList ul{
+    padding: 12px 0px;
+}
+.songList ul li{
+    list-style-type: decimal;
+    display: flex;
+    gap: 30px;
+    cursor: pointer;
+    padding: 10px 0;
+    border: 1px solid white;
+    margin: 10px;
+    padding: 6px;
+    border-radius: 5px;
+}
+.songList .info{
+    font-size: 14px;
+    width: 230px;
+}
+.playNow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.playNow span{
+    font-size: 15px;
+    /* width: 60px; */
+    /* padding: -1px 22px; */
+}
+.seekbar{
+    height: 2px;
+    width: 97.5%;
+    background:black;
+    position: absolute;
+    bottom: 0;
+}
+.circle{
+    position: relative;
+    height: 10px;
+    width: 10px;
+    border-radius: 12px;
+    background-color: black;
+    bottom: 4px;
+    left: 0%;
+    transform: left 0.5s;
+}
+.songbuttons img{
+    cursor: pointer;
 }
