--- a/utility.css
+++ b/utility.css
@@ -17,5 +17,25 @@
     margin: 5px;
 }
 .p-1{
-    padding: 10px;
+    padding: 5px;
 }
+/* Width */
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #333; /* Dark background color */
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #666; /* Darker color for the scrollbar handle */
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #888; /* Lighter color when hovering over the scrollbar handle */
+  }
+  
