Making the website responsive and  next and previous button to function

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body{
     background-color: black;
     color: white;
 }
+.close{
+    display: none;
+}
 .left{
     
     width: 30vw;
@@ -52,7 +55,7 @@ body{
     width: 20px;
 }
 .library{
-    min-height: 73vh;
+    min-height: 83vh;
     position: relative;
 }
 .footer{
@@ -80,15 +83,24 @@ body{
     padding: 20px;
     /* height: 30px; */
 }
+.hamburgerContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
 .spotifyPlaylists{
     padding: 6px;
+}
+.spotifyPlaylists h1{
+    padding: 16px;
 }
 .cardContainer{
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
     margin: 20px;
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 70vh;
 }
 .card{
@@ -128,8 +140,8 @@ body{
     font-weight: bold;
     outline: none;
     border: none;
-    margin: 0 30px;
-    font-size: 19px;
+    margin: 0 25px;
+    font-size: 14px;
     cursor: pointer;
 }
 .signupbtn:hover{
@@ -142,9 +154,9 @@ body{
     color: black;
     font-weight: bold;
     padding: 8px;
-    font-size: 19px;
+    font-size: 14px;
     cursor: pointer;
-    width: 125px;
+    width: 80px;
 }
 .loginbtn:hover{
     font-weight: bold;
@@ -154,12 +166,12 @@ body{
 .playbar{
     position: fixed;
     bottom: 32px;
-    width: 66%;
+    width: 69%;
     padding: 15px;
     filter: invert(1);
     background: #dad5d5;
     border-radius: 15px;
-    height: 30px;
+    min-height: 30px;
     /* height: 25px; */
 }
 .songbuttons{
@@ -189,6 +201,9 @@ body{
 .songList .info{
     font-size: 14px;
     width: 230px;
+}
+.hamburger{
+    display: none;
 }
 .playNow{
     display: flex;
@@ -224,8 +239,61 @@ body{
 .songinfo, .songtime{
     color: black;
     padding: 0 6px;
+    width: 200px;
 }
 .abovebar{
     display: flex;
     justify-content: space-between;
+    margin: 15px 0;
+}
+@media (max-width:1400px){
+    .left{
+        position: absolute;
+        left: -120%;
+        transition: all .3s;
+        z-index: 1;
+        width: 370px;
+        background-color: black;
+        padding: 0;
+    }
+    .songinfo,.songtime{
+        width: auto;
+    }
+    .left .close{
+        position: absolute;
+        right: 25px;
+        top: 20px;
+        width: 23px;
+    }
+    .right{
+        width: 100vw;
+    }
+    .playbar{
+        width: 91vw;
+    }
+    .seekbar{
+        width: 90vw;
+    }
+    .hamburger{
+        display: block;
+    }
+    .card{
+        width: 80vw;
+    }
+    .cardContainer{
+        margin: 0;
+        justify-content: center;
+    }
+    .close{
+        display: block;
+    }
+    .right{
+        margin: 0;
+    }
+    .abovebar{
+        flex-direction: column;
+        gap: 25px;
+        font-size: 20px;
+        align-items: center;
+    }
 }
